src/yw-config/YW_CONFIG_Parser.cpp

// Generated from YW_CONFIG_.g4 by ANTLR 4.7


#include "YW_CONFIG_Listener.h"

#include "YW_CONFIG_Parser.h"


using namespace antlrcpp;
using namespace yw;
using namespace antlr4;

YW_CONFIG_Parser::YW_CONFIG_Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

YW_CONFIG_Parser::~YW_CONFIG_Parser() {
  delete _interpreter;
}

std::string YW_CONFIG_Parser::getGrammarFileName() const {
  return "YW_CONFIG_.g4";
}

const std::vector<std::string>& YW_CONFIG_Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& YW_CONFIG_Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ConfigFileContext ------------------------------------------------------------------

YW_CONFIG_Parser::ConfigFileContext::ConfigFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<YW_CONFIG_Parser::BlankLineContext *> YW_CONFIG_Parser::ConfigFileContext::blankLine() {
  return getRuleContexts<YW_CONFIG_Parser::BlankLineContext>();
}

YW_CONFIG_Parser::BlankLineContext* YW_CONFIG_Parser::ConfigFileContext::blankLine(size_t i) {
  return getRuleContext<YW_CONFIG_Parser::BlankLineContext>(i);
}

std::vector<YW_CONFIG_Parser::CommentLineContext *> YW_CONFIG_Parser::ConfigFileContext::commentLine() {
  return getRuleContexts<YW_CONFIG_Parser::CommentLineContext>();
}

YW_CONFIG_Parser::CommentLineContext* YW_CONFIG_Parser::ConfigFileContext::commentLine(size_t i) {
  return getRuleContext<YW_CONFIG_Parser::CommentLineContext>(i);
}

std::vector<YW_CONFIG_Parser::SettingLineContext *> YW_CONFIG_Parser::ConfigFileContext::settingLine() {
  return getRuleContexts<YW_CONFIG_Parser::SettingLineContext>();
}

YW_CONFIG_Parser::SettingLineContext* YW_CONFIG_Parser::ConfigFileContext::settingLine(size_t i) {
  return getRuleContext<YW_CONFIG_Parser::SettingLineContext>(i);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::ConfigFileContext::SPACE() {
  return getTokens(YW_CONFIG_Parser::SPACE);
}

tree::TerminalNode* YW_CONFIG_Parser::ConfigFileContext::SPACE(size_t i) {
  return getToken(YW_CONFIG_Parser::SPACE, i);
}


size_t YW_CONFIG_Parser::ConfigFileContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleConfigFile;
}

void YW_CONFIG_Parser::ConfigFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfigFile(this);
}

void YW_CONFIG_Parser::ConfigFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfigFile(this);
}

YW_CONFIG_Parser::ConfigFileContext* YW_CONFIG_Parser::configFile() {
  ConfigFileContext *_localctx = _tracker.createInstance<ConfigFileContext>(_ctx, getState());
  enterRule(_localctx, 0, YW_CONFIG_Parser::RuleConfigFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(23);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(21);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
        case 1: {
          setState(18);
          blankLine();
          break;
        }

        case 2: {
          setState(19);
          commentLine();
          break;
        }

        case 3: {
          setState(20);
          settingLine();
          break;
        }

        } 
      }
      setState(25);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(29);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YW_CONFIG_Parser::SPACE) {
      setState(26);
      match(YW_CONFIG_Parser::SPACE);
      setState(31);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlankLineContext ------------------------------------------------------------------

YW_CONFIG_Parser::BlankLineContext::BlankLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* YW_CONFIG_Parser::BlankLineContext::NEWLINE() {
  return getToken(YW_CONFIG_Parser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::BlankLineContext::SPACE() {
  return getTokens(YW_CONFIG_Parser::SPACE);
}

tree::TerminalNode* YW_CONFIG_Parser::BlankLineContext::SPACE(size_t i) {
  return getToken(YW_CONFIG_Parser::SPACE, i);
}


size_t YW_CONFIG_Parser::BlankLineContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleBlankLine;
}

void YW_CONFIG_Parser::BlankLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlankLine(this);
}

void YW_CONFIG_Parser::BlankLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlankLine(this);
}

YW_CONFIG_Parser::BlankLineContext* YW_CONFIG_Parser::blankLine() {
  BlankLineContext *_localctx = _tracker.createInstance<BlankLineContext>(_ctx, getState());
  enterRule(_localctx, 2, YW_CONFIG_Parser::RuleBlankLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YW_CONFIG_Parser::SPACE) {
      setState(32);
      match(YW_CONFIG_Parser::SPACE);
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(38);
    match(YW_CONFIG_Parser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentLineContext ------------------------------------------------------------------

YW_CONFIG_Parser::CommentLineContext::CommentLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YW_CONFIG_Parser::CommentContext* YW_CONFIG_Parser::CommentLineContext::comment() {
  return getRuleContext<YW_CONFIG_Parser::CommentContext>(0);
}

tree::TerminalNode* YW_CONFIG_Parser::CommentLineContext::NEWLINE() {
  return getToken(YW_CONFIG_Parser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::CommentLineContext::SPACE() {
  return getTokens(YW_CONFIG_Parser::SPACE);
}

tree::TerminalNode* YW_CONFIG_Parser::CommentLineContext::SPACE(size_t i) {
  return getToken(YW_CONFIG_Parser::SPACE, i);
}


size_t YW_CONFIG_Parser::CommentLineContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleCommentLine;
}

void YW_CONFIG_Parser::CommentLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommentLine(this);
}

void YW_CONFIG_Parser::CommentLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommentLine(this);
}

YW_CONFIG_Parser::CommentLineContext* YW_CONFIG_Parser::commentLine() {
  CommentLineContext *_localctx = _tracker.createInstance<CommentLineContext>(_ctx, getState());
  enterRule(_localctx, 4, YW_CONFIG_Parser::RuleCommentLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YW_CONFIG_Parser::SPACE) {
      setState(40);
      match(YW_CONFIG_Parser::SPACE);
      setState(45);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(46);
    comment();
    setState(47);
    match(YW_CONFIG_Parser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SettingLineContext ------------------------------------------------------------------

YW_CONFIG_Parser::SettingLineContext::SettingLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YW_CONFIG_Parser::SettingContext* YW_CONFIG_Parser::SettingLineContext::setting() {
  return getRuleContext<YW_CONFIG_Parser::SettingContext>(0);
}

tree::TerminalNode* YW_CONFIG_Parser::SettingLineContext::NEWLINE() {
  return getToken(YW_CONFIG_Parser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::SettingLineContext::SPACE() {
  return getTokens(YW_CONFIG_Parser::SPACE);
}

tree::TerminalNode* YW_CONFIG_Parser::SettingLineContext::SPACE(size_t i) {
  return getToken(YW_CONFIG_Parser::SPACE, i);
}

YW_CONFIG_Parser::CommentContext* YW_CONFIG_Parser::SettingLineContext::comment() {
  return getRuleContext<YW_CONFIG_Parser::CommentContext>(0);
}


size_t YW_CONFIG_Parser::SettingLineContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleSettingLine;
}

void YW_CONFIG_Parser::SettingLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSettingLine(this);
}

void YW_CONFIG_Parser::SettingLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSettingLine(this);
}

YW_CONFIG_Parser::SettingLineContext* YW_CONFIG_Parser::settingLine() {
  SettingLineContext *_localctx = _tracker.createInstance<SettingLineContext>(_ctx, getState());
  enterRule(_localctx, 6, YW_CONFIG_Parser::RuleSettingLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YW_CONFIG_Parser::SPACE) {
      setState(49);
      match(YW_CONFIG_Parser::SPACE);
      setState(54);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(55);
    setting();
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YW_CONFIG_Parser::SPACE) {
      setState(56);
      match(YW_CONFIG_Parser::SPACE);
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(63);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == YW_CONFIG_Parser::T__0

    || _la == YW_CONFIG_Parser::T__1) {
      setState(62);
      comment();
    }
    setState(65);
    match(YW_CONFIG_Parser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

YW_CONFIG_Parser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::CommentContext::SPACE() {
  return getTokens(YW_CONFIG_Parser::SPACE);
}

tree::TerminalNode* YW_CONFIG_Parser::CommentContext::SPACE(size_t i) {
  return getToken(YW_CONFIG_Parser::SPACE, i);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::CommentContext::WORD() {
  return getTokens(YW_CONFIG_Parser::WORD);
}

tree::TerminalNode* YW_CONFIG_Parser::CommentContext::WORD(size_t i) {
  return getToken(YW_CONFIG_Parser::WORD, i);
}


size_t YW_CONFIG_Parser::CommentContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleComment;
}

void YW_CONFIG_Parser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void YW_CONFIG_Parser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

YW_CONFIG_Parser::CommentContext* YW_CONFIG_Parser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 8, YW_CONFIG_Parser::RuleComment);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    _la = _input->LA(1);
    if (!(_la == YW_CONFIG_Parser::T__0

    || _la == YW_CONFIG_Parser::T__1)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YW_CONFIG_Parser::SPACE

    || _la == YW_CONFIG_Parser::WORD) {
      setState(68);
      _la = _input->LA(1);
      if (!(_la == YW_CONFIG_Parser::SPACE

      || _la == YW_CONFIG_Parser::WORD)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SettingContext ------------------------------------------------------------------

YW_CONFIG_Parser::SettingContext::SettingContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YW_CONFIG_Parser::SettingNameContext* YW_CONFIG_Parser::SettingContext::settingName() {
  return getRuleContext<YW_CONFIG_Parser::SettingNameContext>(0);
}

YW_CONFIG_Parser::SettingValueContext* YW_CONFIG_Parser::SettingContext::settingValue() {
  return getRuleContext<YW_CONFIG_Parser::SettingValueContext>(0);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::SettingContext::SPACE() {
  return getTokens(YW_CONFIG_Parser::SPACE);
}

tree::TerminalNode* YW_CONFIG_Parser::SettingContext::SPACE(size_t i) {
  return getToken(YW_CONFIG_Parser::SPACE, i);
}


size_t YW_CONFIG_Parser::SettingContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleSetting;
}

void YW_CONFIG_Parser::SettingContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSetting(this);
}

void YW_CONFIG_Parser::SettingContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSetting(this);
}

YW_CONFIG_Parser::SettingContext* YW_CONFIG_Parser::setting() {
  SettingContext *_localctx = _tracker.createInstance<SettingContext>(_ctx, getState());
  enterRule(_localctx, 10, YW_CONFIG_Parser::RuleSetting);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(74);
    settingName();
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YW_CONFIG_Parser::SPACE) {
      setState(75);
      match(YW_CONFIG_Parser::SPACE);
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(YW_CONFIG_Parser::T__2);
    setState(85);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(82);
        match(YW_CONFIG_Parser::SPACE); 
      }
      setState(87);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
    setState(88);
    settingValue();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SettingNameContext ------------------------------------------------------------------

YW_CONFIG_Parser::SettingNameContext::SettingNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* YW_CONFIG_Parser::SettingNameContext::WORD() {
  return getToken(YW_CONFIG_Parser::WORD, 0);
}


size_t YW_CONFIG_Parser::SettingNameContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleSettingName;
}

void YW_CONFIG_Parser::SettingNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSettingName(this);
}

void YW_CONFIG_Parser::SettingNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSettingName(this);
}

YW_CONFIG_Parser::SettingNameContext* YW_CONFIG_Parser::settingName() {
  SettingNameContext *_localctx = _tracker.createInstance<SettingNameContext>(_ctx, getState());
  enterRule(_localctx, 12, YW_CONFIG_Parser::RuleSettingName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(YW_CONFIG_Parser::WORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SettingValueContext ------------------------------------------------------------------

YW_CONFIG_Parser::SettingValueContext::SettingValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YW_CONFIG_Parser::UnquotedValueContext* YW_CONFIG_Parser::SettingValueContext::unquotedValue() {
  return getRuleContext<YW_CONFIG_Parser::UnquotedValueContext>(0);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::SettingValueContext::SQ() {
  return getTokens(YW_CONFIG_Parser::SQ);
}

tree::TerminalNode* YW_CONFIG_Parser::SettingValueContext::SQ(size_t i) {
  return getToken(YW_CONFIG_Parser::SQ, i);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::SettingValueContext::DQ() {
  return getTokens(YW_CONFIG_Parser::DQ);
}

tree::TerminalNode* YW_CONFIG_Parser::SettingValueContext::DQ(size_t i) {
  return getToken(YW_CONFIG_Parser::DQ, i);
}


size_t YW_CONFIG_Parser::SettingValueContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleSettingValue;
}

void YW_CONFIG_Parser::SettingValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSettingValue(this);
}

void YW_CONFIG_Parser::SettingValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSettingValue(this);
}

YW_CONFIG_Parser::SettingValueContext* YW_CONFIG_Parser::settingValue() {
  SettingValueContext *_localctx = _tracker.createInstance<SettingValueContext>(_ctx, getState());
  enterRule(_localctx, 14, YW_CONFIG_Parser::RuleSettingValue);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YW_CONFIG_Parser::T__0:
      case YW_CONFIG_Parser::T__1:
      case YW_CONFIG_Parser::T__2:
      case YW_CONFIG_Parser::NEWLINE:
      case YW_CONFIG_Parser::SPACE:
      case YW_CONFIG_Parser::WORD: {
        enterOuterAlt(_localctx, 1);
        setState(92);
        unquotedValue();
        break;
      }

      case YW_CONFIG_Parser::SQ: {
        enterOuterAlt(_localctx, 2);
        setState(93);
        match(YW_CONFIG_Parser::SQ);
        setState(94);
        unquotedValue();
        setState(95);
        match(YW_CONFIG_Parser::SQ);
        break;
      }

      case YW_CONFIG_Parser::DQ: {
        enterOuterAlt(_localctx, 3);
        setState(97);
        match(YW_CONFIG_Parser::DQ);
        setState(98);
        unquotedValue();
        setState(99);
        match(YW_CONFIG_Parser::DQ);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnquotedValueContext ------------------------------------------------------------------

YW_CONFIG_Parser::UnquotedValueContext::UnquotedValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::UnquotedValueContext::SPACE() {
  return getTokens(YW_CONFIG_Parser::SPACE);
}

tree::TerminalNode* YW_CONFIG_Parser::UnquotedValueContext::SPACE(size_t i) {
  return getToken(YW_CONFIG_Parser::SPACE, i);
}

std::vector<tree::TerminalNode *> YW_CONFIG_Parser::UnquotedValueContext::WORD() {
  return getTokens(YW_CONFIG_Parser::WORD);
}

tree::TerminalNode* YW_CONFIG_Parser::UnquotedValueContext::WORD(size_t i) {
  return getToken(YW_CONFIG_Parser::WORD, i);
}


size_t YW_CONFIG_Parser::UnquotedValueContext::getRuleIndex() const {
  return YW_CONFIG_Parser::RuleUnquotedValue;
}

void YW_CONFIG_Parser::UnquotedValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnquotedValue(this);
}

void YW_CONFIG_Parser::UnquotedValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CONFIG_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnquotedValue(this);
}

YW_CONFIG_Parser::UnquotedValueContext* YW_CONFIG_Parser::unquotedValue() {
  UnquotedValueContext *_localctx = _tracker.createInstance<UnquotedValueContext>(_ctx, getState());
  enterRule(_localctx, 16, YW_CONFIG_Parser::RuleUnquotedValue);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(106);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    while (alt != 1 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1 + 1) {
        setState(103);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << YW_CONFIG_Parser::T__2)
          | (1ULL << YW_CONFIG_Parser::SPACE)
          | (1ULL << YW_CONFIG_Parser::WORD))) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        } 
      }
      setState(108);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

// Static vars and initialization.
std::vector<dfa::DFA> YW_CONFIG_Parser::_decisionToDFA;
atn::PredictionContextCache YW_CONFIG_Parser::_sharedContextCache;

// We own the ATN which in turn owns the ATN states.
atn::ATN YW_CONFIG_Parser::_atn;
std::vector<uint16_t> YW_CONFIG_Parser::_serializedATN;

std::vector<std::string> YW_CONFIG_Parser::_ruleNames = {
  "configFile", "blankLine", "commentLine", "settingLine", "comment", "setting", 
  "settingName", "settingValue", "unquotedValue"
};

std::vector<std::string> YW_CONFIG_Parser::_literalNames = {
  "", "'#'", "'//'", "'='", "", "", "'\"'", "'''"
};

std::vector<std::string> YW_CONFIG_Parser::_symbolicNames = {
  "", "", "", "", "NEWLINE", "SPACE", "DQ", "SQ", "WORD"
};

dfa::Vocabulary YW_CONFIG_Parser::_vocabulary(_literalNames, _symbolicNames);

std::vector<std::string> YW_CONFIG_Parser::_tokenNames;
